# yakui-shadcn

./: Cargo.toml  README.md
yakui-shadcn/: Cargo.toml
yakui-shadcn/src/: button.rs  colours.rs  icons.rs  left_border.rs  lib.rs  sidebar.rs  style.rs  text.rs  wide_button.rs
